--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,14 @@ html, body {
   background-color: rgb(50, 50, 50);
 }
 
-p {
+p, h1, h2 {
+  text-align: center;
   color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+h1 {
+  font-size: 100px;
 }
 
 canvas {
